<resources>
    <string name="app_name">Motivation</string>
    <string name="salutation">Olá</string>
    <string name="phrase">Frase</string>
    <string name="new_phrase">Nova frase</string>
    <string name="letStart">Vamos começar?</string>
    <string name="whats_your_name">Qual seu nome?</string>
    <string name="save">salvar</string>

    <string name="validation_mandatory_name">Informe seu nome</string>

</resources>