<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".ui.UserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/letStart"
        android:textColor="@color/white"
        android:textSize="32sp" />


    <EditText
        android:id="@+id/edit_name"
        android:fontFamily="@font/bree_serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="16dp"
        android:hint="@string/whats_your_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/bree_serif"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/light_purple"
        android:elevation="5dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white" />
</RelativeLayout>